# GestionParking

./: CMakeLists.txt  Makefile  calculOcc.R  gestion_parking.sql  main.c  parking.sh  script_mysql.sh
libs/headers/: dbConnect.h  menu.h
libs/headers/R/: tauxOccupation.h
libs/headers/type_vehicule/: afficherNombrePlacesDisponibles.h  identifierTypeVehicule.h  libererPlaceParking.h  nombreDePlacesDisponibles.h  recupListeTypeVehicule.h
libs/headers/vehicule/: calculPrixParking.h  entreeNouveauVehicule.h  facturerVehicule.h  retrouverVehicule.h  sortirVehicule.h
libs/sources/: dbConnect.c  menu.c
libs/sources/R/: tauxOccupation.c
libs/sources/type_vehicule/: afficherNombrePlacesDisponibles.c  identifierTypeVehicule.c  libererPlaceParking.c  nombreDePlacesDisponibles.c  recupListeTypeVehicule.c
libs/sources/vehicule/: calculPrixParking.c  entreeNouveauVehicule.c  facturerVehicule.c  retrouverVehicule.c  sortirVehicule.c
